# joby_takehome

./: CMakeLists.txt  README.md
include/jobysim/: actor.hpp  sim.hpp  sim_builder.hpp  sim_executor.hpp  sim_visitor.hpp  types.hpp
include/jobysim/actors/: actor.hpp  aircraft.hpp  environment.hpp  fleet_observer.hpp  observer.hpp  root_actor.hpp
include/jobysim/aircraft/: spec.hpp
src/: CMakeLists.txt  integration_test.cpp  main.cpp  sim_builder.cpp  sim_executor.cpp
src/actors/: CMakeLists.txt  aircraft.cpp  aircraft_test.cpp  environment.cpp  environment_test.cpp  fleet_obsever.cpp  root_actor.cpp
src/aircraft/: spec.cpp
